--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@ title: Blog
 
 <div class="about">
   <div class="about_inner">
-    <p>Hi!</p>
-    <p>I’m Octavi. I'm a Software Engineer graduated at Universitat Politecnica de Catalunya.</p>
+    <p>Hi, I'm Octavi!</p>
+    <p>I'm a Software Engineer and this is my personal blog. I just like to write about anything I am learning as I think it helps me to internalize concepts. Also it might help others.</p>
     <div class="social-icons">
       <ul class="list-inline">
         <li><a href="https://www.linkedin.com/in/octavipascual/" target="_blank">
